# slimgui

./: .gitignore  404.html  AGENTS.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE.txt  README.md  apiref_implot.html  deploy_docs.sh  full_build.sh  hashmap.json  index.html  index.md  llms-full.txt  llms.txt  package-lock.json  package.json  pyproject.toml  recipes.md  ruff.toml  slimgui_stubgen.cmake
.github/workflows/: wheels.yml
api/: imgui.html  imgui.md  implot.html  implot.md
assets/: api_imgui.md.1I1WAVPU.js  api_imgui.md.1I1WAVPU.lean.js  api_imgui.md.BDUFprzG.js  api_imgui.md.BDUFprzG.lean.js  api_imgui.md.BM6IBRzE.js  api_imgui.md.BM6IBRzE.lean.js  api_imgui.md.C1dlP3FH.js  api_imgui.md.C1dlP3FH.lean.js  api_implot.md.B8Pnhr_K.js  api_implot.md.B8Pnhr_K.lean.js  api_implot.md.CdqVaoee.js  api_implot.md.CdqVaoee.lean.js  api_implot.md.Dy_oRlSt.js  api_implot.md.Dy_oRlSt.lean.js  api_implot.md.VQZVdCqB.js  app.2ebS3KhK.js  app.CPvAX0OU.js  app.DgkP6Shu.js  guide_getting-started.md.C865ZSuf.js  guide_getting-started.md.C865ZSuf.lean.js  guide_getting-started.md.XLF4nwkk.js  guide_getting-started.md.XLF4nwkk.lean.js  guide_typing.md.B7A80EZ_.js  guide_typing.md.B7A80EZ_.lean.js  guide_typing.md.Bb38uHaD.js  guide_typing.md.Bb38uHaD.lean.js  index.md.Bbkq-kx4.js  index.md.Bbkq-kx4.lean.js  index.md.dtyqXLVz.js  index.md.dtyqXLVz.lean.js  index.md.pVhr7CRT.js  index.md.pVhr7CRT.lean.js  recipes_implot.md.7nWK1-a_.js  recipes_implot.md.7nWK1-a_.lean.js  recipes_implot.md.BY3EaeWj.js  recipes_implot.md.BY3EaeWj.lean.js  recipes_implot.md.Cb8nHYk0.js  recipes_implot.md.Cb8nHYk0.lean.js  recipes_index.md.ijhAyah4.js  recipes_index.md.ijhAyah4.lean.js  (+19 more)
assets/chunks/: framework.BD9pLfSD.js  framework.Bpn2sGEj.js  theme.BXcbllCn.js  theme.CYPziIf4.js  theme.D9YKsR6Y.js
docs/: apiref.md  apiref_implot.md  index.html  index.md  template.html
docs/.vitepress/: config.ts
docs/.vitepress/theme/: MarkdownLinkInline.vue  index.ts  style.css
docs/api/: imgui.md  implot.md
docs/guide/: getting-started.md  typing.md
docs/recipes/: implot.md  index.md  layout.md  styles.md  widgets.md
example/: app.py  demo.py  run_examples.py  standalone_glfw.py  standalone_pyglet.py
example/demo_window/: __init__.py  demo.py  layout.py  property_editor.py  shapes.py  types.py  utils.py  widgets.py  widgets2.py
example/doc_examples/: AGENTS.md  __init__.py  buttons.py  implot.py  layout.py  meta.py  styles.py
example/implot_demo_window/: __init__.py  implot.py
example/util/: gl_utils.py  imgui_window.py
guide/: getting-started.html  getting-started.md  typing.html  typing.md
recipes/: implot.html  implot.md  index.html  layout.html  layout.md  styles.html  styles.md  widgets.html  widgets.md
src/: helpers.h  im_enums.inl  imgui_enums.inl  implot_bindings.cpp  implot_enums.inl  implot_funcs.inl  pyi_patterns.txt  slimgui_ext.cpp  type_casts.h  type_casts.inl  type_casts_implot.h
src/c/imgui/: imconfig.h
src/slimgui/: __init__.py  common_types.py  slimgui_ext.pyi
src/slimgui/imgui/: __init__.py
src/slimgui/implot/: __init__.py
src/slimgui/integrations/: base.py  glfw.py  null.py  opengl.py
src/slimgui/slimgui_ext/: __init__.pyi  imgui.pyi  implot.pyi
src/slimgui/slimgui_ext/imgui/: __init__.pyi
src/slimgui/slimgui_ext/implot/: __init__.pyi
tests/: test_implot.py  test_simple.py
