[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind@git+https://github.com/wjakob/nanobind@a5701022b461350f8f01132bcfced2106be6108e", "typing-extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "slimgui"
version = "0.4.1"
description = "Python Dear ImGui bindings"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Janne Hellsten", email = "jjhellst@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Documentation = "https://nurpax.github.io/slimgui/"
Repository = "https://github.com/nurpax/slimgui"

[tool.slimgui]
imgui_version = "1.92.1"

[tool.pytest.ini_options]
testpaths = [ "tests", "gen" ]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

# cmake.build-type = "Debug"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
skip = ["cp38-*", "pp38-*", "cp39-*", "pp39-*", "*-macosx_*"]
archs = ["auto64"]          # Only target 64 bit architectures

# Run pytest to ensure that the package was correctly built
# test-command = "pytest {project}/tests"
# test-requires = "pytest"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
